# bink-web-automation

./: Dockerfile  Pipfile  README.md  behave.ini  browser.py  config.py  install_chrome_driver.sh  pyproject.toml  pytest.ini  report_render.sh  schedule.py  settings.py
%allure_result_folder%/: 0aacb499-cf17-483d-8f5a-af4bae7f7b43-result.json  1062aba6-b0fe-46dd-ac8a-6413f0fe1344-result.json  191cb35e-7967-4fba-b519-16029155b98f-result.json  20b52be0-1076-4aee-9139-588b47ae505a-container.json  385ad7a2-ce5c-40d1-843b-fcaee7c8a87b-result.json  3906bbf5-8504-4d40-83ac-94d9a79014ce-result.json  4441ad86-7369-44e4-b24b-21f46711a52e-result.json  47821493-507b-435c-b3c1-0f37faac9174-container.json  4c6ba86d-8548-4a2b-8f6b-c4a1c489b81e-result.json  5ec46848-b0fc-426f-a92a-92df3e214246-container.json  81235b30-bdb6-4a3f-8127-fcb88b765695-container.json  82602ed9-1156-48ed-9adc-6fe773753486-result.json  968a6a01-454a-4c45-b752-c60840fde4f7-result.json  98d6f67c-076e-4206-b64b-7cd880e203c4-result.json  9c28f12a-6437-42cc-8ca2-d7dbce72d870-container.json  9e748b40-1647-497e-8e43-071c26ea979b-result.json  abc26630-dba3-4d76-a77b-9fe903e4740f-attachment.txt  abfc9258-e941-4a08-8698-7b7e6533243d-container.json  aff76b00-33c1-4cf3-9e2d-64ae699a81be-result.json  b3cf4326-d686-4170-9658-9361905da720-container.json  bba5b919-8796-47ad-8720-64a2fc2c1a87-result.json  c5a139d9-b2f9-40df-a356-f1f06f2e319f-result.json  c8e571a2-aa73-4a33-b96d-74d834384402-container.json  c99a3aa4-ab31-4177-9689-493295041961-result.json  ccc2570e-a4a5-4794-82de-cdea82461c4d-result.json  df2fda19-dfee-4460-bea6-2ceaad770046-attachment.txt  e4cfeba4-2d3e-4620-92f3-eb53278c09a2-result.json  ea458d78-9c5f-4647-9b53-ea6522eac8e4-result.json
TestData/: test_data.py
config/: config.py
extras/: test_delete_paymentcard.robot
features/: environment.py  wasabi_amex_card.feature  wasabi_auto_add.feature  wasabi_login.feature  (+6 more)
(+101 files in other folders)
