[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bink-web-automation"
version = "0.1.0"
description = "automation framework"
authors = ["<njames@bink.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bink_web_automation"}]
repository = "https://github.com/binkhq/bink-web-automation"


[[tool.poetry.source]]
name = "bink-pypi"
url = "https://pypi.tools.uksouth.bink.sh/simple"
default = false
secondary = false


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.1.3"
selenium = "^4.5.0"
robotframework = "^5.0.1"
robotframework-pythonlibcore = "^3.0.0"
robotframework-seleniumlibrary = "^6.0.0"
apscheduler = "^3.9.1"
logger = "^1.4"
shared-config-storage = "^1.6.1"
azure-storage-blob = "^12.14.1"
azure-identity = "^1.11.0"
arrow = "^1.2.3"
psycopg2-binary = "^2.9.4"

